src/stylesheets/About.css
.about-container {
  display: flex;
  flex-direction: column;
  padding: 50px;
}

.about-title {
  font-size: 2rem;
  font-weight: bold;
  margin: 0px;
  margin-left: -20px;
}

.about-section {
  display: flex;
  flex-direction: column;
}

.bold {
  font-weight: bold;
}

.dev-icon {
  height: 50px;
  width: 50px;
}

.skills-grid {
  align-self: center;
  margin-top: 20px;
  display: grid;
  width: 500px;
  height: 300px;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
}

.skills {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 5px;
  font-size: 0.8rem;
}

@media (min-width: 1001px) {
  .about-section {
    flex-direction: row;
    align-items: center;
  }

  .about-info {
    max-width: 600px;
  }
}

